--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "vite-plugin-offload-wasm",
+  "title": "Vite Plugin: Offload WASM",
   "version": "0.1.0",
+  "description": "Serve WASM from a CDN or any remote location, bypassing the local server entirely",
   "keywords": [
     "vite",
     "vite-plugin",
@@ -30,14 +32,14 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.13.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
-    "vite": "^5.2.7"
+    "vite": "^5.2.12"
   },
   "peerDependencies": {
-    "vite": "^5.2.7"
+    "vite": "^5.2.12"
   },
   "scripts": {
     "build": "unbuild",
