--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kermage/vite-plugin-offload-wasm.git"
+    "url": "git+https://github.com/kermage/vite-plugin-offload-wasm.git"
   },
   "type": "module",
   "main": "dist/index.cjs",
