--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-plugin-offload-wasm",
   "title": "Vite Plugin: Offload WASM",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Serve WASM from a CDN or any remote location, bypassing the local server entirely",
   "keywords": [
     "vite",
@@ -34,14 +34,14 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^20.14.10",
-    "prettier": "^3.3.2",
-    "typescript": "^5.5.3",
-    "unbuild": "^2.0.0",
-    "vite": "^5.3.3"
+    "@types/node": "^22.13.5",
+    "prettier": "^3.5.2",
+    "typescript": "^5.7.3",
+    "unbuild": "^3.5.0",
+    "vite": "^6.2.0"
   },
   "peerDependencies": {
-    "vite": "^5.2.12"
+    "vite": "^5.2.12 || ^6.0.7"
   },
   "scripts": {
     "build": "unbuild",
