--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-plugin-offload-wasm",
   "title": "Vite Plugin: Offload WASM",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Serve WASM from a CDN or any remote location, bypassing the local server entirely",
   "keywords": [
     "vite",
@@ -19,26 +19,27 @@
     "url": "git+https://github.com/kermage/vite-plugin-offload-wasm.git"
   },
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
   "files": [
     "dist/"
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
+      "import": {
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
     }
   },
   "devDependencies": {
-    "@types/node": "^22.13.5",
-    "prettier": "^3.5.2",
-    "typescript": "^5.7.3",
+    "@types/node": "^22.13.9",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2",
     "unbuild": "^3.5.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.1"
   },
   "peerDependencies": {
     "vite": "^5.2.12 || ^6.0.7"
