--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "vite": "^5.2.12 || ^6.0.7"
   },
   "scripts": {
+    "lint": "prettier -l",
+    "fix": "prettier -w",
     "build": "unbuild",
     "watch": "unbuild --stub",
     "prepublishOnly": "pnpm build"
